force-app/main/default/objects/RD_Component_Master_Blaster__c/RD_Component_Master_Blaster__c.object-meta.xml
<CustomObject>
    <label>RD Component Master Blaster</label>
    <nameField>
        <label>RD Component Master Blaster</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Component Master Blaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>