force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Arcuate_Ring__c.field-meta.xml
<CustomField>
    <fullName>Arcuate_Ring__c</fullName>
    <label>Arcuate Ring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>