force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/ASME_Inlet_Option_Code__c.field-meta.xml
<CustomField>
    <fullName>ASME_Inlet_Option_Code__c</fullName>
    <label>ASME Inlet Option Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>