force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Dent_Protector__c.field-meta.xml
<CustomField>
    <fullName>Dent_Protector__c</fullName>
    <label>Dent Protector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>