force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Girdle__c.field-meta.xml
<CustomField>
    <fullName>Girdle__c</fullName>
    <label>Girdle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>