force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Hi_Temp_Assembly__c.field-meta.xml
<CustomField>
    <fullName>Hi_Temp_Assembly__c</fullName>
    <label>Hi-Temp Assembly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>