force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Holdown_Ring__c.field-meta.xml
<CustomField>
    <fullName>Holdown_Ring__c</fullName>
    <label>Holdown Ring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>