force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Inlet_O_Ring__c.field-meta.xml
<CustomField>
    <fullName>Inlet_O_Ring__c</fullName>
    <label>Inlet O-Ring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>