force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Outlet_Option_Code__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Option_Code__c</fullName>
    <label>Outlet Option Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>