force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Outlet_Ring__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Ring__c</fullName>
    <label>Outlet Ring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>