force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/PAS_Seal__c.field-meta.xml
<CustomField>
    <fullName>PAS_Seal__c</fullName>
    <label>PAS Seal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>