force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Seal__c.field-meta.xml
<CustomField>
    <fullName>Seal__c</fullName>
    <label>Seal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>