force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Size_UL__c.field-meta.xml
<CustomField>
    <fullName>Size_UL__c</fullName>
    <label>Size UL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>