force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Top_Section__c.field-meta.xml
<CustomField>
    <fullName>Top_Section__c</fullName>
    <label>Top Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>