force-app/main/default/objects/RD_Component_Master_Blaster__c/fields/Vacuum_Support_1_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Support_1_Inlet__c</fullName>
    <label>Vacuum Support 1 - Inlet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>