force-app/main/default/objects/RD_Component_Master_Blaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Outlet_Option_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>